--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,6 +1,6 @@
 {
   "auth": {
-    "fluamp46aee1a5": {
+    "fluamp46787e3a": {
       "service": "Cognito",
       "providerPlugin": "awscloudformation",
       "dependsOn": [],
