--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   url_launcher: ^6.0.17
   sqflite: ^2.0.0+4 # sqlite
   local_auth: #生体認証
+  package_info: #ライブラリパッケージ
+  simple_url_preview: ^3.0.1
 
 dev_dependencies:
   flutter_test:
