--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -25,13 +25,15 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-    	<string>The app tries to use your camera</string>
-    	<key>NSMicrophoneUsageDescription</key>
-    	<string>The app tries to use your microphone</string>
+    <string>The app tries to use your camera</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>The app tries to use your microphone</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+    <string>requires to access photo library</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
