--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   amazon_cognito_identity_dart_2: ^1.0.3
   shared_preferences: ^2.0.11
   flutter_local_notifications: ^9.1.5
+  share: ^2.0.4
 
 dev_dependencies:
   flutter_test:
