--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -17,7 +17,7 @@
     }
   },
   "auth": {
-    "fluamp1945507f": {
+    "fluamp5de615fc": {
       "service": "Cognito",
       "providerPlugin": "awscloudformation",
       "dependsOn": [],
@@ -42,11 +42,28 @@
       }
     }
   },
+  "function": {
+    "S3Trigger725410b1": {
+      "service": "Lambda",
+      "providerPlugin": "awscloudformation",
+      "build": true
+    }
+  },
   "storage": {
-    "s37dadcbc8": {
+    "s3f88c7157": {
       "service": "S3",
       "providerPlugin": "awscloudformation",
-      "dependsOn": []
+      "dependsOn": [
+        {
+          "category": "function",
+          "resourceName": "S3Trigger725410b1",
+          "attributes": [
+            "Name",
+            "Arn",
+            "LambdaExecutionRole"
+          ]
+        }
+      ]
     }
   }
 }
