--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,9 @@ dependencies:
   table_calendar: ^3.0.3
   flutter_chat_ui:
   crypto: any
+  quiver: ^3.0.1+1
+  flutter_app_badger: ^1.3.0
+  flutter_picker: ^2.0.2
 
 dev_dependencies:
   flutter_test:
