--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,8 @@ dependencies:
   quiver: ^3.0.1+1
   flutter_app_badger: ^1.3.0
   flutter_picker: ^2.0.2
+  firebase_auth: ^3.3.6
+  firebase_core:
 
 dev_dependencies:
   flutter_test:
